// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expneses Summary with 1 expense correctly 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
  </h2>
</div>
`;

exports[`should render Expneses Summary with multiple expenses correctly 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expneses
     totalling 
    $2.00
  </h2>
</div>
`;
